get dishes by restaurant id

--- a/snapDish/www/partials/restaurants.html
+++ b/snapDish/www/partials/restaurants.html
@@ -1,7 +1,7 @@
 <ion-view title="Restaurants">
 	<ion-content>
 		<ion-list >
-			<ion-item class="item-avatar" ng-repeat="restaurant in restaurants">
+			<ion-item class="item-avatar" ng-repeat="restaurant in restaurants" ng-click="goToDish(restaurant.ID)">
 				<img ng-src="{{restaurant.LOGO}}">
 				<h2>{{restaurant.NAME}}</h2>
 				<p>{{restaurant.ADDRESS}}</p>
