--- a/snapDish/www/partials/dishes.html
+++ b/snapDish/www/partials/dishes.html
@@ -1,1 +1,17 @@
-dishes template
+<ion-view title="Dishes">
+	<ion-content>
+
+		<ion-list >
+
+			<ion-item class="item-avatar" ng-repeat="dish in dishes" ng-click="">
+<!-- 			<img ng-src="{{restaurant.LOGO}}">
+			
+			<h2>{{restaurant.NAME}}</h2>
+			<p>{{restaurant.ADDRESS}}</p> -->
+				<span>dish</span>
+			</ion-item>
+
+		</ion-list>
+
+	</ion-content>
+</ion-view>
