--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -1,1 +1,14 @@
-restaurant
+<ion-view title="Restaurant">
+	<ion-content>
+
+		<ion-list >
+
+			<ion-item class="item-avatar" ng-repeat="dish in dishes">
+			
+			<h2>{{dish.NAME}}</h2>
+
+			</ion-item>
+		</ion-list>
+
+	</ion-content>
+</ion-view>
