--- a/snapDish/www/partials/new_dish.html
+++ b/snapDish/www/partials/new_dish.html
@@ -1,1 +1,22 @@
-new dish
+<ion-view title="New Dish">
+
+	<ion-content>
+		<a ng-click="takePicture('library')" class="button button-outline icon-right ion-images button-positive">Photo Library</a>
+		<a ng-click="takePicture('camera')" class="button button-outline icon-right ion-social-instagram-outline button-positive">Take Picture</a>
+		<a ng-click="save()" class="button button-outline button-positive">Save</a>
+		<label class="item item-input">
+			<span class="input-label">Dish Name :</span>
+			<input type="text" ng-model="dish.name">
+		</label>
+		<ion-list>
+			<ion-item class="item-avatar">
+				<img ng-src="{{dish.url}}">
+				<h2>{{dish.name}}</h2>
+			</ion-item>
+		</ion-list>
+		<div class="item item-image">
+			<img ng-show="dish.url !== undefined" ng-src="{{dish.url}}">
+		</div>
+	</ion-content>
+
+</ion-view>
