--- a/snapDish/www/partials/new_dish.html
+++ b/snapDish/www/partials/new_dish.html
@@ -10,12 +10,12 @@
 		</label>
 		<ion-list>
 			<ion-item class="item-avatar">
-				<img ng-src="{{dish.url}}">
+				<img ng-src="{{dish.base64_string}}">
 				<h2>{{dish.name}}</h2>
 			</ion-item>
 		</ion-list>
 		<div class="item item-image">
-			<img ng-show="dish.url !== undefined" ng-src="{{dish.url}}">
+			<img ng-show="dish.base64_string !== undefined" ng-src="{{dish.base64_string}}">
 		</div>
 	</ion-content>
 
