--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -6,7 +6,7 @@
 		</label>
 		<ion-list>
 			<ion-item class="item-avatar" ng-repeat="dish in dishes | filter: search" ui-sref="view_dish">
-				<img ng-src="{{dish.IMG}}">
+				<img ng-src="{{dish.URL}}">
 				<h2>{{dish.NAME}}</h2>
 				<p>{{dish.RATE}}</p>
 			</ion-item>
