--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -1,11 +1,12 @@
-<ion-view title="Restaurant">
+<ion-view>
+	<ion-nav-title>{{restaurant.name}}</ion-nav-title>
 	<ion-content>
 		<label class="item item-input">
 			<i class="icon ion-search placeholder-icon"></i>
 			<input type="text" placeholder="Search" ng-model="dishQuery" ng-change="setList(dishQuery)">
 		</label>
 		<ion-list>
-			<ion-item class="item-avatar" ng-repeat="dish in dishes | filter: search" ui-sref="view_dish">
+			<ion-item class="item-avatar" ng-repeat="dish in restaurant.dishes | filter: search" ui-sref="view_dish">
 				<img ng-src="{{dish.URL}}">
 				<h2>{{dish.NAME}}</h2>
 				<p>{{dish.RATE}}</p>
