--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -6,7 +6,7 @@
 			<input type="text" placeholder="Search" ng-model="dishQuery" ng-change="setList(dishQuery)">
 		</label>
 		<ion-list>
-			<ion-item class="item-avatar" ng-repeat="dish in restaurant.dishes | filter: search" ui-sref="view_dish">
+			<ion-item class="item-avatar" ng-repeat="dish in restaurant.dishes | filter: search" ui-sref="dish({dishId: dish.ID})">    
 				<img ng-src="{{dish.URL}}">
 				<h2>{{dish.NAME}}</h2>
 				<p>{{dish.RATING}}</p>
