--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -6,14 +6,14 @@
 			<input type="text" placeholder="Search" ng-model="dishQuery" ng-change="setList(dishQuery)">
 		</label>
 		<ion-list>
-			<ion-item class="item-avatar" ng-repeat="dish in restaurant.dishes | filter: search" ui-sref="dish({dishId: dish.ID})">    
+			<ion-item class="item-avatar" ng-repeat="dish in restaurant.dishes | filter: search" ui-sref="dish({dishId: dish.ID})">
 				<img ng-src="{{dish.URL}}">
 				<h2>{{dish.NAME}}</h2>
 				<p>{{dish.RATING}}</p>
 			</ion-item>
 		</ion-list>
 	</ion-content>
-	<button ui-sref="new_dish" class="bar bar-footer bar-balanced">
+	<button ui-sref="new_dish({dishId: dish.ID})" class="bar bar-footer bar-balanced">
 		<div class="title">Add New</div>
 	</button>
 </ion-view>
