--- a/snapDish/www/partials/restaurants.html
+++ b/snapDish/www/partials/restaurants.html
@@ -7,7 +7,7 @@
 		</label>
 
 		<ion-list >
-			<ion-item class="item-avatar" ng-repeat="restaurant in restaurants track by $index | filter: search" ui-sref="restaurant({restaurantId: restaurant.ID})">
+			<ion-item class="item-avatar" ng-repeat="restaurant in restaurants | filter: search" ui-sref="restaurant({restaurantId: restaurant.ID})">
 			<img ng-src="{{restaurant.LOGO}}">
 			
 			<h2>{{restaurant.NAME}}</h2>
