--- a/snapDish/scss/ionic.app.scss
+++ b/snapDish/scss/ionic.app.scss
@@ -68,3 +68,33 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		overflow: hidden;
 	}
 }
+
+.search-resturant {
+	width: 30%;
+	left: 50%;
+	margin-left: -15%;
+	background: transparent;
+}
+
+.resturant-content {
+	background-color: rgb(230, 231, 230);
+
+	.dish-list {
+		.list{
+			//padding: 5px;
+		}
+
+		.dish-item {
+			padding: 0;
+			margin: 5px;
+			border-color: rgb(184, 187, 189);
+			background-color: white;
+
+			.dish-image {
+				width: 33.333%;
+				height: 33.333%;
+				padding: 5px;
+			}
+		}
+	}
+}
