--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -1,19 +1,30 @@
 <ion-view>
 	<ion-nav-title>
 		<label class="item item-input search-resturant">
-			<i class="icon ion-search placeholder-icon"></i>
-			<input type="text" placeholder="Search" ng-model="dishQuery" ng-change="setList(dishQuery)">
+			<i class="icon ion-ios-search-strong placeholder-icon"></i>
+			<input type="text" ng-model="dishQuery" ng-change="setList(dishQuery)">
 		</label>
 	</ion-nav-title>
-	<ion-content class="has-footer resturant-content">
+	<ion-content class="resturant-content">
+		<div class="sort-by">sort by | name</div>
 		<ion-list class="dish-list">
 			<ion-item class="dish-item" ng-repeat="dish in restaurant.dishes | filter: search">
-				<h2>{{dish.NAME}} | {{dish.RATING}}</h2>
+				<div class="dish-title">
+					<h2 class="dish-name"> | {{dish.NAME}}</h2>
+					<div class="stars">
+						<span ng-repeat="star in stars"
+								ng-click="setStars($index)"
+								ng-class="{'ion-ios-star': ($index+1) <= dish.RATING, 'ion-ios-star-outline': ($index+1) > dish.RATING }">
+						</span>
+					</div>
+				</div>
 				<img ng-src="{{dish.URL}}" ng-repeat="image in dishImages" class="dish-image">
 			</ion-item>
 		</ion-list>
 	</ion-content>
-	<button ui-sref="new_dish({dishId: dish.ID})" class="bar bar-footer bar-balanced">
-		<div class="title">Add New</div>
-	</button>
+	<div class="snap-footer">
+		<button ui-sref="new_dish({dishId: dish.ID})" class="bar bar-footer button-add-dish">
+			<i class="ion-plus"></i>
+		</button>
+	</div>
 </ion-view>
