small fix for stars

--- a/snapDish/scss/ionic.app.scss
+++ b/snapDish/scss/ionic.app.scss
@@ -183,6 +183,12 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		}
 	}
 
+	.dish-content {
+		.stars {
+			font-size: 50px;
+		}
+	}
+
 	.resturant-content {
 		background-color: rgb(230, 231, 230);
 
