--- a/snapDish/www/partials/restaurant.html
+++ b/snapDish/www/partials/restaurant.html
@@ -17,7 +17,7 @@
 						</span>
 					</div>
 				</div>
-				<img ng-src="{{dish.URL}}" ng-repeat="image in dishImages" class="dish-image">
+				<img ng-src="{{photo}}" ng-repeat="photo in dish.PHOTOS track by $index | limitTo: 3" class="dish-image">
 			</ion-item>
 		</ion-list>
 	</ion-content>
