--- a/snapDish/scss/ionic.app.scss
+++ b/snapDish/scss/ionic.app.scss
@@ -85,25 +85,9 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		color: #fff;
 	}
 
-/* 	.stars {
-		padding: 10px;
-		color: rgb(240, 3, 76);
-
-		.star {
-			width: 25px;
-			height: 25px;
-			border: 1px solid rgb(180, 180, 180);
-			display: inline-block;
-			margin: 0 5px;
-			@include border-radius(50%);
-
-			&.active {
-				background: pink;
-				width: 30px;
-				height: 30px;
-			}
-		}
-	} */
+	.stars {
+		color: rgb(255,51,102);
+	}
 
 	.popup-container {
 		.popup {
@@ -158,6 +142,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 	.snap-footer {
 		position: absolute;
+		z-index: 999;
 		width: 100%;
 		height: 30px;
 		background: rgba(246, 247, 249, 0.8);
@@ -180,12 +165,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 				top: 3px;
 				color: #fff;
 			}
-		}
-	}
-
-	.dish-content {
-		.stars {
-			font-size: 50px;
 		}
 	}
 
@@ -234,10 +213,70 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 						position: absolute;
 						right: 10px;
 						top: 8px;
-						color: rgb(255,51,102);
 					}
 				}
 			}
+		}
+	}
+
+	.dish {
+		.dish-footer {
+			position: absolute;
+			bottom: 115px;
+			width: 100%;
+
+			.stars {
+				position: absolute;
+				left: 50%;
+				margin-left: -137px;
+				font-size: 50px;
+				z-index: 999;
+			}
+		}
+
+		.dish-content {
+			background: #e7e8ed;
+
+			.dish-inner {
+				height: 100%;
+				margin: 5px;
+				border: 1px solid #babbbf;
+				background: #fff;
+			}
+		}
+
+
+		.dish-wrapper {
+			border: 3px solid #fff;
+
+			.dish-f {
+				width: 100%;
+				height: 300px;
+				background-color: red;
+				border: 1px solid #c7cbcc;
+				background-size: cover;
+				background-repeat: no-repeat;
+				background-position: 50% 50%;
+
+				.like {
+					position: absolute;
+					bottom: 10px;
+					left: 10px;
+					width: 40px;
+					height: 40px;
+					background: url('../images/heart_full.png') no-repeat center center;
+					background-size: cover;
+
+					&.active {
+						background: url('../images/heart_empty.png') no-repeat center center;
+						background-size: cover;
+					}
+				}
+			}
+		}
+
+		.slider {
+			//top: 200px;
 		}
 	}
 }
