--- a/snapDish/scss/ionic.app.scss
+++ b/snapDish/scss/ionic.app.scss
@@ -20,6 +20,21 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "www/lib/ionic/scss/ionic";
 
 #snapDishApp {
+	color: #7a7f83;
+
+	.nav-bar-title,
+	.title {
+		color: #fff;
+	}
+
+	.snap-ion-content {
+		background: #e7e8ed;
+	}
+
+	.sort-by {
+		padding-left: 10px;
+	}
+
 	.login{
 		background: url('../images/login-bg.jpg') no-repeat center center;
 		background-size: cover;
@@ -147,39 +162,33 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		height: 30px;
 		background: rgba(246, 247, 249, 0.8);
 		bottom: 0px;
+		border-top: 1px solid #ccd0d3;
 
-		.button-add-dish {
-			background: rgb(255,51,102);
+		.button-add-dish,
+		.button-add-image {
+			//background: rgb(255,51,102);
 			width: 50px;
 			height: 50px;
 			bottom: 3px;
 			left: 50%;
-			margin-left: -15px;
+			margin-left: -25px;
 			border: 2px solid #f8f9f4;
 			@include border-radius(50%);
+		}
 
-			i {
-				font-size: 30px;
-				position: absolute;
-				left: 12px;
-				top: 3px;
-				color: #fff;
-			}
+		.button-add-image {
+			background: url('../images/addCam_noBG.png') no-repeat center center;
+			background-size: cover;
+		}
+
+		.button-add-dish {
+			background: url('../images/addPlus_noBG.png') no-repeat center center;
+			background-size: cover;
 		}
 	}
 
 	.resturant-content {
-		background-color: rgb(230, 231, 230);
-
-		.sort-by {
-			padding-left: 10px;
-		}
-
 		.dish-list {
-			.list{
-				//padding: 5px;
-			}
-
 			.dish-item {
 				padding: 0;
 				margin: 5px;
@@ -222,26 +231,36 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	.dish {
 		.dish-footer {
 			position: absolute;
-			bottom: 115px;
+			bottom: 30px;
 			width: 100%;
+			height: 120px;
 
 			.stars {
 				position: absolute;
+				top: 40px;
 				left: 50%;
 				margin-left: -137px;
 				font-size: 50px;
 				z-index: 999;
 			}
+
+			.add-rating {
+				position: absolute;
+				left: 10px;
+				z-index: 999;
+			}
 		}
 
 		.dish-content {
-			background: #e7e8ed;
-
 			.dish-inner {
 				height: 100%;
 				margin: 5px;
 				border: 1px solid #babbbf;
 				background: #fff;
+
+				.dish-name {
+					margin: 5px;
+				}
 			}
 		}
 
@@ -262,8 +281,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 					position: absolute;
 					bottom: 10px;
 					left: 10px;
-					width: 40px;
-					height: 40px;
+					width: 30px;
+					height: 30px;
 					background: url('../images/heart_full.png') no-repeat center center;
 					background-size: cover;
 
@@ -272,11 +291,53 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 						background-size: cover;
 					}
 				}
+
+				.flag {
+					position: absolute;
+					top: 10px;
+					right: 10px;
+					width: 30px;
+					height: 30px;
+					background: url('../images/flag.png') no-repeat center center;
+					background-size: cover;
+
+					&.active {
+						background: url('../images/flag_hover.png') no-repeat center center;
+						background-size: cover;
+					}
+				}
+
+				.facebook-user {
+					position: absolute;
+					top: 10px;
+					left: 10px;
+					width: 30px;
+					height: 30px;
+				}
 			}
 		}
+	}
 
-		.slider {
-			//top: 200px;
+	.restaurants-content {
+		.item-restaurant {
+			margin: 5px;
+			border: 1px solid #c6cbcf;
+
+			h2,
+			p {
+				color: #7a7f83;
+			}
+
+			.arrow-right {
+				position: absolute;
+				right: 15px;
+				top: 50%;
+				margin-top: -10px;
+				width: 10px;
+				height: 20px;
+				background: url('../images/arrow.png') no-repeat center center;
+				background-size: cover;
+			}
 		}
 	}
 }
