--- a/snapDish/www/css/ionic.app.css
+++ b/snapDish/www/css/ionic.app.css
@@ -7588,110 +7588,114 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
-#snapDishApp .login {
-  background: url('../images/login-bg.jpg') no-repeat center center;
-  background-size: cover; }
-  #snapDishApp .login .logo {
-    margin: 160px auto 0;
-    width: 210px; }
-    #snapDishApp .login .logo img {
-      width: inherit; }
-  #snapDishApp .login .facebook-btn {
-    width: 290px;
-    margin: 96px auto 0;
-    cursor: pointer; }
-    #snapDishApp .login .facebook-btn img {
-      width: inherit; }
-#snapDishApp .back-button {
-  background: transparent;
-  border: 0;
-  padding-right: 50px; }
-  #snapDishApp .back-button .back-text {
-    display: none; }
-  #snapDishApp .back-button .ion-arrow-left-b {
-    color: white;
-    font-size: 20px; }
-#snapDishApp .nav-bar-block .bar-header {
-  background: #ff3366; }
-#snapDishApp .logo-back {
-  position: absolute;
-  background: url('../images/logo.png') no-repeat center center;
-  background-size: cover;
-  width: 37px;
-  height: 22px;
-  top: 5px;
-  left: 20px; }
-#snapDishApp .menu-snap-dish {
-  position: absolute;
-  z-index: 99;
-  top: 5px;
-  right: 3px;
-  background: transparent;
-  border: 0;
-  font-size: 25px;
-  color: #fff; }
-#snapDishApp .stars {
-  color: #ff3366; }
-#snapDishApp .popup-container .popup {
-  background-color: rgba(171, 218, 255, 0.9); }
-#snapDishApp .popup-container .popup-body {
-  overflow: hidden; }
-#snapDishApp .search-resturant {
-  width: 92%;
-  margin-left: 5px;
-  background: transparent;
-  border: 0; }
-  #snapDishApp .search-resturant i {
-    color: #f5fdff;
-    font-size: 18px; }
-    #snapDishApp .search-resturant i:after {
+#snapDishApp {
+  color: #7a7f83; }
+  #snapDishApp .nav-bar-title, #snapDishApp .title {
+    color: #fff; }
+  #snapDishApp .snap-ion-content {
+    background: #e7e8ed; }
+  #snapDishApp .sort-by {
+    padding-left: 10px; }
+  #snapDishApp .login {
+    background: url('../images/login-bg.jpg') no-repeat center center;
+    background-size: cover; }
+    #snapDishApp .login .logo {
+      margin: 160px auto 0;
+      width: 210px; }
+      #snapDishApp .login .logo img {
+        width: inherit; }
+    #snapDishApp .login .facebook-btn {
+      width: 290px;
+      margin: 96px auto 0;
+      cursor: pointer; }
+      #snapDishApp .login .facebook-btn img {
+        width: inherit; }
+  #snapDishApp .back-button {
+    background: transparent;
+    border: 0;
+    padding-right: 50px; }
+    #snapDishApp .back-button .back-text {
+      display: none; }
+    #snapDishApp .back-button .ion-arrow-left-b {
+      color: white;
+      font-size: 20px; }
+  #snapDishApp .nav-bar-block .bar-header {
+    background: #ff3366; }
+  #snapDishApp .logo-back {
+    position: absolute;
+    background: url('../images/logo.png') no-repeat center center;
+    background-size: cover;
+    width: 37px;
+    height: 22px;
+    top: 5px;
+    left: 20px; }
+  #snapDishApp .menu-snap-dish {
+    position: absolute;
+    z-index: 99;
+    top: 5px;
+    right: 3px;
+    background: transparent;
+    border: 0;
+    font-size: 25px;
+    color: #fff; }
+  #snapDishApp .stars {
+    color: #ff3366; }
+  #snapDishApp .popup-container .popup {
+    background-color: rgba(171, 218, 255, 0.9); }
+  #snapDishApp .popup-container .popup-body {
+    overflow: hidden; }
+  #snapDishApp .search-resturant {
+    width: 92%;
+    margin-left: 5px;
+    background: transparent;
+    border: 0; }
+    #snapDishApp .search-resturant i {
+      color: #f5fdff;
+      font-size: 18px; }
+      #snapDishApp .search-resturant i:after {
+        position: absolute;
+        left: 10px;
+        top: 35px;
+        content: '';
+        width: calc(100% - 20px);
+        height: 1px;
+        background: #fcfffd;
+        opacity: 0.5; }
+    #snapDishApp .search-resturant:before, #snapDishApp .search-resturant:after {
       position: absolute;
       left: 10px;
-      top: 35px;
+      top: 30px;
       content: '';
-      width: calc(100% - 20px);
-      height: 1px;
+      width: 1px;
+      height: 5px;
       background: #fcfffd;
       opacity: 0.5; }
-  #snapDishApp .search-resturant:before, #snapDishApp .search-resturant:after {
+    #snapDishApp .search-resturant:after {
+      left: initial;
+      right: 10px; }
+  #snapDishApp .snap-footer {
     position: absolute;
-    left: 10px;
-    top: 30px;
-    content: '';
-    width: 1px;
-    height: 5px;
-    background: #fcfffd;
-    opacity: 0.5; }
-  #snapDishApp .search-resturant:after {
-    left: initial;
-    right: 10px; }
-#snapDishApp .snap-footer {
-  position: absolute;
-  z-index: 999;
-  width: 100%;
-  height: 30px;
-  background: rgba(246, 247, 249, 0.8);
-  bottom: 0px; }
-  #snapDishApp .snap-footer .button-add-dish {
-    background: #ff3366;
-    width: 50px;
-    height: 50px;
-    bottom: 3px;
-    left: 50%;
-    margin-left: -15px;
-    border: 2px solid #f8f9f4;
-    -webkit-border-radius: 50%;
-    border-radius: 50%; }
-    #snapDishApp .snap-footer .button-add-dish i {
-      font-size: 30px;
-      position: absolute;
-      left: 12px;
-      top: 3px;
-      color: #fff; }
-#snapDishApp .resturant-content {
-  background-color: #e6e7e6; }
-  #snapDishApp .resturant-content .sort-by {
-    padding-left: 10px; }
+    z-index: 999;
+    width: 100%;
+    height: 30px;
+    background: rgba(246, 247, 249, 0.8);
+    bottom: 0px;
+    border-top: 1px solid #ccd0d3; }
+    #snapDishApp .snap-footer .button-add-dish, #snapDishApp .snap-footer .button-add-image {
+      width: 50px;
+      height: 50px;
+      bottom: 3px;
+      left: 50%;
+      margin-left: -25px;
+      border: 2px solid #f8f9f4;
+      -webkit-border-radius: 50%;
+      border-radius: 50%; }
+    #snapDishApp .snap-footer .button-add-image {
+      background: url('../images/addCam_noBG.png') no-repeat center center;
+      background-size: cover; }
+    #snapDishApp .snap-footer .button-add-dish {
+      background: url('../images/addPlus_noBG.png') no-repeat center center;
+      background-size: cover; }
   #snapDishApp .resturant-content .dish-list .dish-item {
     padding: 0;
     margin: 5px;
@@ -7715,41 +7719,78 @@ a.button {
         position: absolute;
         right: 10px;
         top: 8px; }
-#snapDishApp .dish .dish-footer {
-  position: absolute;
-  bottom: 115px;
-  width: 100%; }
-  #snapDishApp .dish .dish-footer .stars {
+  #snapDishApp .dish .dish-footer {
     position: absolute;
-    left: 50%;
-    margin-left: -137px;
-    font-size: 50px;
-    z-index: 999; }
-#snapDishApp .dish .dish-content {
-  background: #e7e8ed; }
+    bottom: 30px;
+    width: 100%;
+    height: 120px; }
+    #snapDishApp .dish .dish-footer .stars {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      margin-left: -137px;
+      font-size: 50px;
+      z-index: 999; }
+    #snapDishApp .dish .dish-footer .add-rating {
+      position: absolute;
+      left: 10px;
+      z-index: 999; }
   #snapDishApp .dish .dish-content .dish-inner {
     height: 100%;
     margin: 5px;
     border: 1px solid #babbbf;
     background: #fff; }
-#snapDishApp .dish .dish-wrapper {
-  border: 3px solid #fff; }
-  #snapDishApp .dish .dish-wrapper .dish-f {
-    width: 100%;
-    height: 300px;
-    background-color: red;
-    border: 1px solid #c7cbcc;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%; }
-    #snapDishApp .dish .dish-wrapper .dish-f .like {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      width: 40px;
-      height: 40px;
-      background: url('../images/heart_full.png') no-repeat center center;
-      background-size: cover; }
-      #snapDishApp .dish .dish-wrapper .dish-f .like.active {
-        background: url('../images/heart_empty.png') no-repeat center center;
+    #snapDishApp .dish .dish-content .dish-inner .dish-name {
+      margin: 5px; }
+  #snapDishApp .dish .dish-wrapper {
+    border: 3px solid #fff; }
+    #snapDishApp .dish .dish-wrapper .dish-f {
+      width: 100%;
+      height: 300px;
+      background-color: red;
+      border: 1px solid #c7cbcc;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: 50% 50%; }
+      #snapDishApp .dish .dish-wrapper .dish-f .like {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        width: 30px;
+        height: 30px;
+        background: url('../images/heart_full.png') no-repeat center center;
         background-size: cover; }
+        #snapDishApp .dish .dish-wrapper .dish-f .like.active {
+          background: url('../images/heart_empty.png') no-repeat center center;
+          background-size: cover; }
+      #snapDishApp .dish .dish-wrapper .dish-f .flag {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 30px;
+        height: 30px;
+        background: url('../images/flag.png') no-repeat center center;
+        background-size: cover; }
+        #snapDishApp .dish .dish-wrapper .dish-f .flag.active {
+          background: url('../images/flag_hover.png') no-repeat center center;
+          background-size: cover; }
+      #snapDishApp .dish .dish-wrapper .dish-f .facebook-user {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 30px;
+        height: 30px; }
+  #snapDishApp .restaurants-content .item-restaurant {
+    margin: 5px;
+    border: 1px solid #c6cbcf; }
+    #snapDishApp .restaurants-content .item-restaurant h2, #snapDishApp .restaurants-content .item-restaurant p {
+      color: #7a7f83; }
+    #snapDishApp .restaurants-content .item-restaurant .arrow-right {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      margin-top: -10px;
+      width: 10px;
+      height: 20px;
+      background: url('../images/arrow.png') no-repeat center center;
+      background-size: cover; }
