--- a/snapDish/www/partials/dish.html
+++ b/snapDish/www/partials/dish.html
@@ -1,20 +1,25 @@
 <ion-view class="dish">
 	<ion-nav-title>{{dish.name}}</ion-nav-title>
-	<ion-content class="dish-content" scroll="false">
+	<ion-content class="snap-ion-content dish-content" scroll="false">
 		<div class="dish-inner">
 			<ion-slide-box on-slide-changed="slideHasChanged($index)">
 				<ion-slide ng-repeat="image in dish.images track by $index">
 				<div class="dish-wrapper">
 					<div class="dish-f" style="background-image: url({{image}})">
 						<div class="like" ng-click="setLike(dish)" ng-class="{active: dish.like}"></div>
+						<div class="flag" ng-click="setFlag(dish)" ng-class="{active: dish.flag}"></div>
+						<div class="facebook-user" ng-click="setFacebook(dish)">
+							<img src="http://graph.facebook.com/{{user.id}}/picture?width=270&height=270"/>
+						</div>
 					</div>
 				</div>
 				</ion-slide>
 			</ion-slide-box>
-			<span class="input-label">| {{name}}</span>
+			<div class="dish-name">| {{name}}</div>
 		</div>
 	</ion-content>
 	<div class="dish-footer">
+		<div class="add-rating">Add rating:</div>
 		<div class="stars">
 			<span ng-repeat="star in stars"
 					ng-click="setStars($index)"
@@ -23,8 +28,7 @@
 		</div>
 	</div>
 	<div class="snap-footer">
-		<button ui-sref="new_photo({dishId: dish.ID})" class="bar bar-footer button-add-dish">
-			<i class="ion-plus"></i>
+		<button ui-sref="new_photo({dishId: dish.ID})" class="bar bar-footer button-add-image">
 		</button>
 	</div>
 </ion-view>
