--- a/snapDish/www/partials/restaurants.html
+++ b/snapDish/www/partials/restaurants.html
@@ -1,18 +1,18 @@
 <ion-view title="Restaurants">
-	<ion-content>
+	<ion-content class="snap-ion-content restaurants-content">
 
 		<label class="item item-input">
 			<i class="icon ion-search placeholder-icon"></i>
 			<input type="text" placeholder="Search" ng-model="query" ng-change="setList(query)">
 		</label>
-
+		<div class="sort-by">sort by | name</div>
 		<ion-list >
-			<ion-item class="item-avatar" ng-repeat="restaurant in restaurants | filter: search" ui-sref="restaurant({restaurantId: restaurant.ID})">
+			<ion-item class="item-avatar item-restaurant" ng-repeat="restaurant in restaurants | filter: search" ui-sref="restaurant({restaurantId: restaurant.ID})">
 			<img ng-src="{{restaurant.LOGO}}">
-			
+
 			<h2>{{restaurant.NAME}}</h2>
 			<p>{{restaurant.ADDRESS}}</p>
-
+			<i class="arrow-right"></i>
 			</ion-item>
 		</ion-list>
 
