--- a/snapDish/www/partials/restaurants.html
+++ b/snapDish/www/partials/restaurants.html
@@ -1,6 +1,8 @@
 <ion-view title="Restaurants">
 	<ion-content class="snap-ion-content restaurants-content">
 
+		<button ng-click="getUser()">get user</button>
+
 		<label class="item item-input">
 			<i class="icon ion-search placeholder-icon"></i>
 			<input type="text" placeholder="Search" ng-model="query" ng-change="setList(query)">
