--- a/snapDish/www/css/ionic.app.css
+++ b/snapDish/www/css/ionic.app.css
@@ -7794,3 +7794,88 @@ a.button {
       height: 20px;
       background: url('../images/arrow.png') no-repeat center center;
       background-size: cover; }
+  #snapDishApp .add-dish-content {
+    font-size: 25px; }
+    #snapDishApp .add-dish-content .view {
+      position: absolute;
+      top: 44px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: #e6e7e9; }
+      #snapDishApp .add-dish-content .view li {
+        position: relative;
+        margin: 5px;
+        height: calc(25% - 18px);
+        background: #fff; }
+        #snapDishApp .add-dish-content .view li:last-child {
+          background: #ff3366; }
+      #snapDishApp .add-dish-content .view .snap, #snapDishApp .add-dish-content .view .choose, #snapDishApp .add-dish-content .view .or {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        margin-top: -5%;
+        width: 20%;
+        height: 35%;
+        border: 0;
+        background: url('../images/photo_popup_cam.png') no-repeat center center;
+        background-size: cover; }
+      #snapDishApp .add-dish-content .view .choose {
+        left: initial;
+        right: 10%;
+        background: url('../images/photo_popup_gallery.png') no-repeat center center;
+        background-size: cover; }
+      #snapDishApp .add-dish-content .view .or {
+        left: 50%;
+        right: initial;
+        margin-left: -5%;
+        margin-top: -10%;
+        width: 10%;
+        height: 10%;
+        background: url('../images/photo_popup_or.png') no-repeat center center;
+        background-size: cover; }
+      #snapDishApp .add-dish-content .view .button-new-dish {
+        text-align: center;
+        border: 0;
+        background: transparent;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        color: white; }
+        #snapDishApp .add-dish-content .view .button-new-dish span {
+          position: relative;
+          font-size: 25px;
+          top: 25px;
+          font-size: 25px; }
+      #snapDishApp .add-dish-content .view .new-dish-name div {
+        font-size: 25px;
+        padding-top: 20px;
+        text-align: center;
+        width: 100%;
+        color: #768187; }
+      #snapDishApp .add-dish-content .view .new-dish-name label {
+        position: absolute;
+        bottom: 25px;
+        width: 80%;
+        left: 50%;
+        margin-left: -40%;
+        border-bottom: 1px solid #797d80; }
+        #snapDishApp .add-dish-content .view .new-dish-name label:before, #snapDishApp .add-dish-content .view .new-dish-name label:after {
+          position: absolute;
+          left: 0;
+          top: -10px;
+          content: '';
+          width: 1px;
+          height: 10px;
+          background: #797d80; }
+        #snapDishApp .add-dish-content .view .new-dish-name label:after {
+          left: initial;
+          right: 0; }
+      #snapDishApp .add-dish-content .view .new-dish-name input {
+        position: absolute;
+        bottom: 25px;
+        width: 80%;
+        left: 50%;
+        margin-left: -40%; }
