--- a/snapDish/www/partials/new_dish.html
+++ b/snapDish/www/partials/new_dish.html
@@ -1,7 +1,7 @@
-<ion-view title="New Dish">
+<ion-view title="Add a new dish" class="add-dish-content">
 
-	<ion-content>
-		<a ng-click="takePicture('library')" class="button button-outline icon-right ion-images button-positive">Photo Library</a>
+	<!-- <ion-content class=""> -->
+<!-- 		<a ng-click="takePicture('library')" class="button button-outline icon-right ion-images button-positive">Photo Library</a>
 		<a ng-click="takePicture('camera')" class="button button-outline icon-right ion-social-instagram-outline button-positive">Take Picture</a>
 		<a ng-click="save()" class="button button-outline button-positive">Save</a>
 		<label class="item item-input">
@@ -16,7 +16,31 @@
 		</ion-list>
 		<div class="item item-image">
 			<img ng-show="dish.base64_string !== undefined" ng-src="{{dish.base64_string}}">
-		</div>
-	</ion-content>
+		</div> -->
+		<ul class="view">
+			<li class="new-dish-name">
+				<div>Name</div>
+				<label>
+					<input type="text" ng-model="dish.name">
+				</label>
+			</li>
+			<li>
+				<ion-item class="item-avatar" ng-show="dish.base64_string">
+					<img ng-src="{{dish.base64_string}}">
+					<h2>{{dish.name}}</h2>
+				</ion-item>
+			</li>
+			<li>
+				<a ng-click="takePicture('camera')" class="button snap"></a>
+				<a class="button or"></a>
+				<a ng-click="takePicture('library')" class="button choose"></a>
+			</li>
+			<li>
+				<a ng-click="save()" class="button button-new-dish">
+					<span>save</span>
+				</a>
+			</li>
+		</ul>
+	<!-- </ion-content> -->
 
 </ion-view>
